# Client-Server-async-sockets-app

./: .gitignore  CMakeLists.txt
common/asyncSockets/: baseSocket.cpp  baseSocket.h  tcpAcceptor.cpp  tcpAcceptor.h  tcpSocket.cpp  tcpSocket.h  udpAcceptor.cpp  udpAcceptor.h  udpSocket.cpp  udpSocket.h
src/client/: main.cpp  tcp-client.cpp  tcp-client.hpp  udp-client.cpp  udp-client.hpp
src/server/: main.cpp  tcp-server.cpp  tcp-server.hpp  udp-server.cpp  udp-server.hpp
